fix a11y issue "Elements must meet minimum color contrast ratio thresholds"

--- a/less/widgets/search.less
+++ b/less/widgets/search.less
@@ -6,7 +6,7 @@
 	outline: 1px solid #ADADAD;
 	font-family: @font-family-headline;
 	font-size: 20px;
-	color: #7A7A7A;
+	color: #707070;
 	label {
 		position: absolute;
 		top: 10px;
