--- a/style.dev.css
+++ b/style.dev.css
@@ -9509,7 +9509,7 @@ div[id*='trumba'] iframe {
   outline: 1px solid #ADADAD;
   font-family: "Encode Sans Compressed", sans-serif;
   font-size: 20px;
-  color: #7A7A7A;
+  color: #707070;
 }
 #searchform label {
   position: absolute;
